external-crates/move/crates/move-prover/tests/snapshots/empty.ok.move.snap
---
source: crates/move-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
Verification successful
