external-crates/move/crates/move-prover/tests/snapshots/failing-spec.move.snap
---
source: crates/move-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
THIS SHOULD FAIL