external-crates/move/crates/move-prover/tests/snapshots/prettyprint-struct.move.snap
---
source: crates/move-prover/tests/integration.rs
assertion_line: 128
expression: output
snapshot_kind: text
---
exiting with verification errors
error: prover::ensures assertion does not hold
   ┌─ tests/inputs/prettyprint-struct.move:21:5
   │
21 │     ensures(res.b != x);
   │     ^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/prettyprint-struct.move:19: foo_spec
   =         x = 0u64
   =     at tests/inputs/prettyprint-struct.move:20: foo_spec
   =         x = 0u64
   =     at tests/inputs/prettyprint-struct.move:14: foo
   =         result = foo.MyStruct{a = 0u64, b = 0u64}
   =     at tests/inputs/prettyprint-struct.move:16: foo
   =         res#1#0 = foo.MyStruct{a = 0u64, b = 0u64}
   =     at tests/inputs/prettyprint-struct.move:21: foo_spec
