external-crates/move/crates/move-prover/tests/snapshots/reals.fail.move.snap
---
source: crates/move-prover/tests/integration.rs
assertion_line: 128
expression: output
---
[internal] boogie exited with compilation errors:
output.bpl(3815,4): Error: call to undeclared procedure: $1_real_from_u64
output.bpl(3823,4): Error: call to undeclared procedure: $1_real_from_u64
output.bpl(3908,4): Error: call to undeclared procedure: $1_real_from_u64
output.bpl(3916,4): Error: call to undeclared procedure: $1_real_from_u64
output.bpl(3983,4): Error: call to undeclared procedure: $1_real_from_u64
output.bpl(3991,4): Error: call to undeclared procedure: $1_real_from_u64
output.bpl(4089,4): Error: call to undeclared procedure: $1_real_from_u64
output.bpl(4098,4): Error: call to undeclared procedure: $1_real_from_u64
output.bpl(4214,4): Error: call to undeclared procedure: $1_real_from_u64
output.bpl(4222,4): Error: call to undeclared procedure: $1_real_from_u64
10 name resolution errors detected in output.bpl
